<resources>
    <string name="app_name">TaskCalendar</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm">Confirm</string>
    <string name="have_account_yet">Have account yet</string>
    <string name="confirm_password">Confirm password</string>
    <string name="name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="staff">Staff</string>
</resources>
